refactor: CQRS 读侧归属应用层 + 事件载荷 record 化 + DomainEvent 协议精简
- ProductQueryRepository 从 domain.repository.query 迁至 application.port.query，
  读模型查询接口归属应用层，符合 CQRS 分层语义
- ProductQueryRepositoryImpl 加 @Transactional(readOnly=true)，整理 import 与代码结构
- 抽取 ProductEvent.Data record，ProductCreatedEvent / ProductUpdatedEvent 共享载荷结构，
  消除事件 record 字段重复
- DomainEvent 接口瘦身：移除 version() / idempotencyKey()，幂等键统一走 metadata.eventId()
  （UUID v7 实例级唯一），注释同步更新
- Product 聚合根整理：内联 spec 访问、章节重排（Factory/Transition/Mutation/Utility/Query/Inner），
  assignId 归入 Utility 节
- ProductStatus.fromCode() 未知 code 抛 IllegalArgumentException（fail-fast 约定）
- 删除 AuditLogMapper.xml（无对应 SQL，死代码清理）
- Singleflight 注释修正、AGENTS.md 文档同步