@@ -4,6 +4,7 @@ import com.baomidou.mybatisplus.extension.conditions.query.LambdaQueryChainWrapp
 import com.baomidou.mybatisplus.extension.plugins.pagination.Page;
 import com.cartethyia.easyorange.common.result.PageResult;
 import com.baomidou.mybatisplus.extension.toolkit.ChainWrappers;
+import com.cartethyia.easyorange.product.application.port.query.ProductQueryRepository;
 import com.cartethyia.easyorange.product.application.query.readmodel.CategoryReadModel;
 import com.cartethyia.easyorange.product.application.query.readmodel.HotKeywordReadModel;
 import com.cartethyia.easyorange.product.application.query.readmodel.ProductReadModel;
@@ -11,13 +12,9 @@ import com.cartethyia.easyorange.product.application.query.readmodel.SearchHisto
 import com.cartethyia.easyorange.product.application.query.readmodel.SellerReadModel;
 import com.cartethyia.easyorange.product.application.service.SearchHistoryBufferAppService;
 import com.cartethyia.easyorange.product.adapter.outbound.cache.ProductCacheConstant;
-import com.cartethyia.easyorange.product.domain.constant.ProductConstant;
-import com.cartethyia.easyorange.product.domain.repository.query.ProductQueryRepository;
-import com.cartethyia.easyorange.product.domain.port.CategoryCachePort;
 import com.cartethyia.easyorange.product.adapter.outbound.persistence.CategoryDO;
 import com.cartethyia.easyorange.product.adapter.outbound.persistence.HotKeywordDO;
 import com.cartethyia.easyorange.product.adapter.outbound.persistence.ProductDO;
-import com.cartethyia.easyorange.product.adapter.outbound.persistence.ProductDetailDO;
 import com.cartethyia.easyorange.product.adapter.outbound.persistence.ProductImageDO;
 import com.cartethyia.easyorange.product.adapter.outbound.persistence.SearchHistoryDO;
 import com.cartethyia.easyorange.product.adapter.outbound.persistence.mapper.CategoryMapper;
@@ -26,24 +23,27 @@ import com.cartethyia.easyorange.product.adapter.outbound.persistence.mapper.Pro
 import com.cartethyia.easyorange.product.adapter.outbound.persistence.mapper.ProductImageMapper;
 import com.cartethyia.easyorange.product.adapter.outbound.persistence.mapper.ProductMapper;
 import com.cartethyia.easyorange.product.adapter.outbound.persistence.mapper.SearchHistoryMapper;
+import com.cartethyia.easyorange.product.domain.constant.ProductConstant;
 import com.cartethyia.easyorange.product.domain.enums.ConditionLevel;
 import com.cartethyia.easyorange.product.domain.enums.ProductStatus;
+import com.cartethyia.easyorange.product.domain.port.CategoryCachePort;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.stereotype.Repository;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
-import java.util.HashSet;
 import java.util.List;
-import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Repository
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class ProductQueryRepositoryImpl implements ProductQueryRepository {
 
     private final ProductMapper productMapper;
@@ -56,178 +56,166 @@ public class ProductQueryRepositoryImpl implements ProductQueryRepository {
     private final SearchHistoryBufferAppService searchHistoryBufferService;
     private final CategoryCachePort<CategoryReadModel> categoryCachePort;
 
+    // ===================== 商品查询 =====================
+
     @Override
     public PageResult<ProductReadModel> searchProducts(String keyword, String categoryId, Integer status,
-                                           Integer pageNum, Integer pageSize) {
+                                                        Integer pageNum, Integer pageSize) {
         return searchProducts(keyword, categoryId, status, null, null, null, null, null, pageNum, pageSize);
     }
 
     @Override
     public PageResult<ProductReadModel> searchProducts(String keyword, String categoryId, Integer status,
-                                           BigDecimal minPrice, BigDecimal maxPrice,
-                                           Integer conditionLevel, String sort,
-                                           Boolean hasDiscount,
-                                           Integer pageNum, Integer pageSize) {
-        Page<ProductDO> page = new Page<>(pageNum, pageSize);
+                                                       BigDecimal minPrice, BigDecimal maxPrice,
+                                                       Integer conditionLevel, String sort,
+                                                       Boolean hasDiscount,
+                                                       Integer pageNum, Integer pageSize) {
+        var page = new Page<ProductDO>(pageNum, pageSize);
 
         if (keyword != null && !keyword.isBlank()) {
             var criteria = new ProductMapper.ProductSearchCriteria(
                     keyword,
                     status != null ? ProductStatus.fromCode(status) : ProductStatus.ONLINE,
-                    minPrice,
-                    maxPrice,
+                    minPrice, maxPrice,
                     conditionLevel != null ? ConditionLevel.fromCode(conditionLevel) : null,
                     hasDiscount);
-            Page<ProductDO> resultPage = productMapper.searchByFullText(page, criteria);
-            return convertToReadModelPage(resultPage);
+            return convertToReadModelPage(productMapper.searchByFullText(page, criteria));
         }
 
         var wrapper = ChainWrappers.lambdaQueryChain(productMapper);
         if (categoryId != null) {
-            List<String> categoryIds = resolveCategoryIdsWithChildren(categoryId);
-            wrapper.in(ProductDO::getCategoryId, categoryIds);
+            wrapper.in(ProductDO::getCategoryId, resolveCategoryIdsWithChildren(categoryId));
         }
-        if (status != null) {
-            wrapper.eq(ProductDO::getStatus, status);
-        } else {
-            wrapper.eq(ProductDO::getStatus, ProductStatus.ONLINE.getCode());
-        }
-        if (minPrice != null) {
-            wrapper.ge(ProductDO::getPrice, minPrice);
-        }
-        if (maxPrice != null) {
-            wrapper.le(ProductDO::getPrice, maxPrice);
-        }
-        if (conditionLevel != null) {
-            wrapper.eq(ProductDO::getConditionLevel, conditionLevel);
-        }
-        if (hasDiscount != null && hasDiscount) {
+        wrapper.eq(ProductDO::getStatus, Objects.requireNonNullElse(status, ProductStatus.ONLINE.getCode()));
+        if (minPrice != null) wrapper.ge(ProductDO::getPrice, minPrice);
+        if (maxPrice != null) wrapper.le(ProductDO::getPrice, maxPrice);
+        if (conditionLevel != null) wrapper.eq(ProductDO::getConditionLevel, conditionLevel);
+        if (Boolean.TRUE.equals(hasDiscount)) {
             wrapper.apply("original_price IS NOT NULL AND original_price > price");
         }
-
         applySort(wrapper, sort);
 
-        Page<ProductDO> productPage = wrapper.page(page);
-        return convertToReadModelPage(productPage);
-    }
-
-    private List<String> resolveCategoryIdsWithChildren(String categoryId) {
-        List<String> ids = new ArrayList<>();
-        ids.add(categoryId);
-        
-        List<CategoryDO> children = categoryCachePort.getCategoriesByParentId(categoryId)
-                .stream()
-                .filter(c -> c.status() != null && c.status() == 1)
-                .map(c -> {
-                    CategoryDO childDO = new CategoryDO();
-                    childDO.setId(c.id());
-                    return childDO;
-                })
-                .toList();
-        
-        children.forEach(c -> ids.add(c.getId()));
-        return ids;
+        return convertToReadModelPage(wrapper.page(page));
     }
 
     @Override
     public PageResult<ProductReadModel> findProductsBySellerId(String sellerId, Integer status,
-                                                          Integer pageNum, Integer pageSize) {
-        Page<ProductDO> page = new Page<>(pageNum, pageSize);
+                                                                Integer pageNum, Integer pageSize) {
         var wrapper = ChainWrappers.lambdaQueryChain(productMapper);
         wrapper.eq(ProductDO::getUserId, sellerId);
-        if (status != null) {
-            wrapper.eq(ProductDO::getStatus, status);
-        }
+        if (status != null) wrapper.eq(ProductDO::getStatus, status);
         wrapper.orderByDesc(ProductDO::getCreateTime);
-
-        Page<ProductDO> productPage = wrapper.page(page);
-        return convertToReadModelPage(productPage);
+        return convertToReadModelPage(wrapper.page(new Page<>(pageNum, pageSize)));
     }
 
     @Override
     public List<ProductReadModel> findProductsByIds(List<String> ids) {
-        if (ids == null || ids.isEmpty()) {
-            return List.of();
-        }
-        List<ProductDO> products = productMapper.selectBatchIds(ids);
-        return products.stream()
+        if (ids == null || ids.isEmpty()) return List.of();
+        return ChainWrappers.lambdaQueryChain(productMapper)
+                .in(ProductDO::getId, ids).list().stream()
                 .map(this::convertToReadModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public ProductReadModel findProductById(String id) {
-        ProductDO product = productMapper.selectById(id);
-        if (product == null) {
-            return null;
-        }
-        return convertToReadModel(product);
+        var product = productMapper.selectById(id);
+        return product != null ? convertToReadModel(product) : null;
+    }
+
+    // ===================== 关联数据查询 =====================
+
+    @Override
+    public List<CategoryInfo> findCategoriesByIds(List<String> categoryIds) {
+        if (categoryIds == null || categoryIds.isEmpty()) return List.of();
+        return ChainWrappers.lambdaQueryChain(categoryMapper)
+                .in(CategoryDO::getId, categoryIds).list().stream()
+                .map(c -> new CategoryInfo(c.getId(), c.getName(), c.getParentId(), c.getLevel(), c.getSortOrder()))
+                .toList();
     }
 
     @Override
-    public List<SearchHistoryReadModel> findSearchHistoryByUserId(String userId, Integer limit) {
-        int lim = limit != null ? limit : 20;
+    public List<ProductDetailInfo> findDetailsByProductIds(List<String> productIds) {
+        if (productIds == null || productIds.isEmpty()) return List.of();
+        return productDetailMapper.selectDetailsByProductIds(productIds).stream()
+                .map(d -> new ProductDetailInfo(d.getProductId(), d.getDescription()))
+                .toList();
+    }
 
+    @Override
+    public List<ProductImageInfo> findImagesByProductIds(List<String> productIds) {
+        if (productIds == null || productIds.isEmpty()) return List.of();
+        return ChainWrappers.lambdaQueryChain(productImageMapper)
+                .in(ProductImageDO::getProductId, productIds)
+                .orderByAsc(ProductImageDO::getSortOrder).list().stream()
+                .map(img -> new ProductImageInfo(img.getProductId(), img.getImageUrl(), img.getSortOrder(),
+                        Objects.equals(img.getIsMain(), 1)))
+                .toList();
+    }
+
+    @Override
+    public List<SellerReadModel> findSellersByIds(Set<String> sellerIds) {
+        if (sellerIds == null || sellerIds.isEmpty()) return List.of();
+        return productMapper.selectSellersByIds(sellerIds).stream()
+                .map(s -> new SellerReadModel(s.id(), s.username(), s.nickName(), s.avatar()))
+                .toList();
+    }
+
+    // ===================== 搜索历史与热词 =====================
+
+    @Override
+    public List<SearchHistoryReadModel> findSearchHistoryByUserId(String userId, Integer limit) {
+        int lim = limit != null ? limit : ProductCacheConstant.SEARCH_HISTORY_MAX_SIZE;
         String key = ProductCacheConstant.SEARCH_HISTORY_KEY_PREFIX + userId;
         List<Object> history = redisTemplate.opsForList().range(key, 0, lim - 1);
 
         if (history != null && !history.isEmpty()) {
-            List<SearchHistoryReadModel> result = new ArrayList<>();
-            Set<String> seen = new HashSet<>();
-            for (Object item : history) {
-                String keyword = item.toString();
-                if (seen.add(keyword)) {
-                    result.add(new SearchHistoryReadModel(null, keyword, null));
-                    if (result.size() >= lim) break;
-                }
-            }
-            return result;
+            return history.stream()
+                    .map(Object::toString)
+                    .distinct()
+                    .limit(lim)
+                    .map(k -> new SearchHistoryReadModel(null, k, null))
+                    .toList();
         }
 
-        Page<SearchHistoryDO> historyPage = new Page<>(1, lim);
-        Page<SearchHistoryDO> result = ChainWrappers.lambdaQueryChain(searchHistoryMapper)
+        return ChainWrappers.lambdaQueryChain(searchHistoryMapper)
                 .eq(SearchHistoryDO::getUserId, userId)
                 .orderByDesc(SearchHistoryDO::getSearchTime)
-                .page(historyPage);
-
-        return result.getRecords().stream()
+                .page(new Page<>(1, lim)).getRecords().stream()
                 .map(h -> new SearchHistoryReadModel(h.getId(), h.getKeyword(), h.getSearchTime()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
     public List<HotKeywordReadModel> findHotKeywords(Integer limit) {
         int lim = limit != null ? limit : 10;
-
         Set<Object> topKeywords = redisTemplate.opsForZSet()
                 .reverseRange(ProductCacheConstant.HOT_KEYWORD_ZSET_KEY, 0, lim - 1);
 
         if (topKeywords != null && !topKeywords.isEmpty()) {
-            List<HotKeywordReadModel> result = new ArrayList<>();
-            for (Object keyword : topKeywords) {
-                Double score = redisTemplate.opsForZSet().score(ProductCacheConstant.HOT_KEYWORD_ZSET_KEY, keyword);
-                int count = score != null ? score.intValue() : 0;
-                result.add(new HotKeywordReadModel(null, keyword.toString(), count, calculateHotLevel(count)));
-            }
-            return result;
+            return topKeywords.stream()
+                    .map(k -> {
+                        int count = Optional.ofNullable(redisTemplate.opsForZSet()
+                                        .score(ProductCacheConstant.HOT_KEYWORD_ZSET_KEY, k))
+                                .map(Number::intValue).orElse(0);
+                        return new HotKeywordReadModel(null, k.toString(), count, calculateHotLevel(count));
+                    })
+                    .toList();
         }
 
-        Page<HotKeywordDO> keywordPage = new Page<>(1, lim);
-        Page<HotKeywordDO> keywordResult = ChainWrappers.lambdaQueryChain(hotKeywordMapper)
+        return ChainWrappers.lambdaQueryChain(hotKeywordMapper)
                 .orderByDesc(HotKeywordDO::getSearchCount)
-                .page(keywordPage);
-
-        return keywordResult.getRecords().stream()
-                .map(k -> new HotKeywordReadModel(k.getId(), k.getKeyword(), k.getSearchCount(), calculateHotLevel(k.getSearchCount())))
-                .collect(Collectors.toList());
+                .page(new Page<>(1, lim)).getRecords().stream()
+                .map(k -> new HotKeywordReadModel(k.getId(), k.getKeyword(), k.getSearchCount(),
+                        calculateHotLevel(k.getSearchCount())))
+                .toList();
     }
 
     @Override
     public List<String> findSearchSuggestions(String keyword, Integer limit) {
-        if (keyword == null || keyword.isBlank()) {
-            return List.of();
-        }
+        if (keyword == null || keyword.isBlank()) return List.of();
 
+        int lim = limit != null ? limit : 10;
         Set<Object> allKeywords = redisTemplate.opsForZSet()
                 .reverseRange(ProductCacheConstant.HOT_KEYWORD_ZSET_KEY, 0, -1);
 
@@ -236,90 +224,37 @@ public class ProductQueryRepositoryImpl implements ProductQueryRepository {
             return allKeywords.stream()
                     .map(Object::toString)
                     .filter(k -> k.toLowerCase().contains(lowerKeyword))
-                    .limit(limit != null ? limit : 10)
-                    .collect(Collectors.toList());
+                    .limit(lim)
+                    .toList();
         }
 
-        int suggestionLimit = limit != null ? limit : 10;
-        Page<HotKeywordDO> suggestionPage = new Page<>(1, suggestionLimit);
-        Page<HotKeywordDO> suggestionResult = ChainWrappers.lambdaQueryChain(hotKeywordMapper)
+        return ChainWrappers.lambdaQueryChain(hotKeywordMapper)
                 .like(HotKeywordDO::getKeyword, keyword)
                 .orderByDesc(HotKeywordDO::getSearchCount)
-                .page(suggestionPage);
-
-        return suggestionResult.getRecords().stream()
+                .page(new Page<>(1, lim)).getRecords().stream()
                 .map(HotKeywordDO::getKeyword)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    @Override
-    public List<SellerReadModel> findSellersByIds(Set<String> sellerIds) {
-        if (sellerIds == null || sellerIds.isEmpty()) {
-            return List.of();
-        }
-        return productMapper.selectSellersByIds(sellerIds).stream()
-                .map(s -> new SellerReadModel(s.id() != null ? String.valueOf(s.id()) : null, s.username(), s.nickName(), s.avatar()))
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<CategoryInfo> findCategoriesByIds(List<String> categoryIds) {
-        if (categoryIds == null || categoryIds.isEmpty()) {
-            return List.of();
-        }
-        List<CategoryDO> categories = categoryMapper.selectBatchIds(categoryIds);
-        return categories.stream()
-                .map(c -> new CategoryInfo(c.getId(), c.getName(), String.valueOf(c.getParentId()), c.getLevel(), c.getSortOrder()))
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<ProductDetailInfo> findDetailsByProductIds(List<String> productIds) {
-        if (productIds == null || productIds.isEmpty()) {
-            return List.of();
-        }
-        List<ProductDetailDO> details = productDetailMapper.selectDetailsByProductIds(productIds);
-        return details.stream()
-                .map(d -> new ProductDetailInfo(d.getProductId(), d.getDescription()))
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<ProductImageInfo> findImagesByProductIds(List<String> productIds) {
-        if (productIds == null || productIds.isEmpty()) {
-            return List.of();
-        }
-        List<ProductImageDO> images = ChainWrappers.lambdaQueryChain(productImageMapper)
-                .in(ProductImageDO::getProductId, productIds)
-                .orderByAsc(ProductImageDO::getSortOrder)
-                .list();
-        return images.stream()
-                .map(img -> new ProductImageInfo(img.getProductId(), img.getImageUrl(), img.getSortOrder(), img.getIsMain() != null && img.getIsMain().equals(1)))
-                .collect(Collectors.toList());
-    }
+    // ===================== 搜索历史写入 =====================
 
     @Override
     public void saveSearchHistory(String userId, String keyword) {
-        if (keyword == null || keyword.isBlank()) {
-            return;
-        }
+        if (keyword == null || keyword.isBlank()) return;
 
         String key = ProductCacheConstant.searchHistoryKey(userId);
         redisTemplate.opsForList().remove(key, 0, keyword);
         redisTemplate.opsForList().leftPush(key, keyword);
-        redisTemplate.opsForList().trim(key, 0, 19);
+        redisTemplate.opsForList().trim(key, 0, ProductCacheConstant.SEARCH_HISTORY_MAX_SIZE - 1);
 
         searchHistoryBufferService.addToBuffer(userId, keyword);
     }
 
     @Override
     public void clearSearchHistory(String userId) {
-        String key = ProductCacheConstant.searchHistoryKey(userId);
-        redisTemplate.delete(key);
-
+        redisTemplate.delete(ProductCacheConstant.searchHistoryKey(userId));
         ChainWrappers.lambdaUpdateChain(searchHistoryMapper)
-                .eq(SearchHistoryDO::getUserId, userId)
-                .remove();
+                .eq(SearchHistoryDO::getUserId, userId).remove();
     }
 
     @Override
@@ -330,45 +265,41 @@ public class ProductQueryRepositoryImpl implements ProductQueryRepository {
                 .remove();
     }
 
+    // ===================== 统计 =====================
+
     @Override
     public long countByStatus(Integer status) {
         return ChainWrappers.lambdaQueryChain(productMapper)
-                .eq(ProductDO::getStatus, status)
-                .count();
+                .eq(ProductDO::getStatus, status).count();
     }
 
+    // ===================== 私有辅助方法 =====================
+
     private PageResult<ProductReadModel> convertToReadModelPage(Page<ProductDO> productPage) {
-        List<ProductReadModel> records = productPage.getRecords().stream()
-                .map(this::convertToReadModel)
-                .collect(Collectors.toList());
-        return PageResult.of(records, productPage.getTotal(), (int) productPage.getCurrent(), (int) productPage.getSize());
+        var records = productPage.getRecords().stream()
+                .map(this::convertToReadModel).toList();
+        return PageResult.of(records, productPage.getTotal(),
+                (int) productPage.getCurrent(), (int) productPage.getSize());
     }
 
     private ProductReadModel convertToReadModel(ProductDO product) {
-        return new ProductReadModel(
-                product.getId(),
-                product.getUserId(),
-                null,
-                null,
-                product.getCategoryId(),
-                null,
-                product.getName(),
-                null,
-                product.getPrice(),
-                product.getOriginalPrice(),
-                product.getStock(),
-                product.getStatus().getCode(),
-                product.getStatus().getDesc(),
-                product.getViewCount(),
-                product.getConditionLevel() != null ? product.getConditionLevel().getCode() : null,
-                null,
-                null,
-                null,
-                List.of(),
-                "",
-                product.getCreateTime(),
-                product.getUpdateTime()
-        );
+        return ProductReadModel.builder()
+                .id(product.getId())
+                .sellerId(product.getUserId())
+                .categoryId(product.getCategoryId())
+                .title(product.getName())
+                .price(product.getPrice())
+                .originalPrice(product.getOriginalPrice())
+                .stock(product.getStock())
+                .status(product.getStatus().getCode())
+                .statusDesc(product.getStatus().getDesc())
+                .views(product.getViewCount())
+                .condition(product.getConditionLevel() != null ? product.getConditionLevel().getCode() : null)
+                .images(List.of())
+                .mainImageUrl("")
+                .createTime(product.getCreateTime())
+                .updateTime(product.getUpdateTime())
+                .build();
     }
 
     private void applySort(LambdaQueryChainWrapper<ProductDO> wrapper, String sort) {
@@ -379,13 +310,22 @@ public class ProductQueryRepositoryImpl implements ProductQueryRepository {
         switch (sort) {
             case "price_asc" -> wrapper.orderByAsc(ProductDO::getPrice);
             case "price_desc" -> wrapper.orderByDesc(ProductDO::getPrice);
-            case "newest" -> wrapper.orderByDesc(ProductDO::getCreateTime);
             case "view", "popular" -> wrapper.orderByDesc(ProductDO::getViewCount);
             default -> wrapper.orderByDesc(ProductDO::getCreateTime);
         }
     }
 
-    private Integer calculateHotLevel(int searchCount) {
+    private List<String> resolveCategoryIdsWithChildren(String categoryId) {
+        var ids = new ArrayList<String>();
+        ids.add(categoryId);
+        categoryCachePort.getCategoriesByParentId(categoryId).stream()
+                .filter(c -> c.status() != null && c.status() == 1)
+                .map(CategoryReadModel::id)
+                .forEach(ids::add);
+        return ids;
+    }
+
+    private static Integer calculateHotLevel(int searchCount) {
         if (searchCount >= ProductConstant.HOT_LEVEL_5_THRESHOLD) return 5;
         if (searchCount >= ProductConstant.HOT_LEVEL_4_THRESHOLD) return 4;
         if (searchCount >= ProductConstant.HOT_LEVEL_3_THRESHOLD) return 3;
